# nfc-srix-tools

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build.sh  dump_tag.c  logging.c  logging.h  nfc_utils.c  nfc_utils.h  otp_reset.c  read_dump.c  read_tag.c  restore_dump.c
